Update Tensorflow Install instructions.ipynb

--- a/Tensorflow Install instructions.ipynb
+++ b/Tensorflow Install instructions.ipynb
@@ -92,6 +92,9 @@
     "```\n",
     "export PATH=/usr/local/cuda-9.0/bin${PATH:+:$PATH}}\n",
     "export LD_LIBRARY_PATH=/usr/local/cuda-9.0/lib64${LD_LIBRARY_PATH:+:${LD_LIBRARY_PATH}}\n",
+    "If the above is not working\n",
+    "export LD_LIBRARY_PATH=/usr/local/cuda-9.0/lib64:$LD_LIBRARY_PATH\n",
+    "export LD_LIBRARY_PATH=/usr/local/cuda/lib64:$LD_LIBRARY_PATH\n",
     "```"
    ]
   },
