--- a/Tensorflow Install instructions.ipynb
+++ b/Tensorflow Install instructions.ipynb
@@ -79,6 +79,9 @@
     "sudo apt-key add /var/cuda-repo-9-0-local/7fa2af80.pub\n",
     "sudo apt-get update\n",
     "sudo apt-get install cuda\n",
+    "if the above is not working\n",
+    "sudo apt-get install aptitude\n",
+    "sudo aptitude install cuda\n",
     "```\n",
     "- download patch 1 and install (you should get a prompt to install once its done downloading)\n",
     "- download patch 2 and install (you should get a prompt to install once its done downloading)\n",
